--- a/library-client-react-main/src/index.css
+++ b/library-client-react-main/src/index.css
@@ -1,5 +1,20 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+.bottom-indent{
+  margin-bottom: 5px;
+}
+
+.admin-button{
+  background: none repeat scroll 0 0 #b34f4f !important;
+  border: 1px solid #b34f4f;
+}
+
+.orders-table table td{
+  width: 0 !important;
+}
+
+.shop-item img{
+  height: 300px;
+}
+
+.disabled-watch{
+  opacity: 0.3;
 }
