library-client-react-main: авторы - добавление, изменение удаление, инфо сообщения с плавным появлением и др.; library-rest-api: доработки для удаления/изменения авторов

--- a/library-client-react-main/src/index.css
+++ b/library-client-react-main/src/index.css
@@ -4,7 +4,11 @@
 
 .admin-button{
   background: none repeat scroll 0 0 #b34f4f !important;
-  border: 1px solid #b34f4f;
+  border: 1px solid #b34f4f !important;
+}
+.admin-button:hover {
+  background: none repeat scroll 0 0 #3b3c41 !important;
+  border: 1px solid #3b3c41 !important;
 }
 
 .orders-table table td{
